# rtsp_to_webrtc

./: .env  README.md
frontend/: Cargo.toml  index.html  webrtc.js
frontend/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  routes.rs  structs.rs  utils.rs  webrtc_impl.rs
