[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["ws", "headers", "axum-macros", "macros"] }
axum-extra = { version = "0.3.7", features = ["spa"] }
clap = { version = "3.2.22", features = ["derive"] }
hyper = { version = "0.14.20", features = ["full"] }
log = "0.4.17"
tokio = { version = "1.21.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
headers = "0.3"
serde = { version = "1.0.145", features = ["derive"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
webrtc = "0.5.1"
anyhow = "1.0.65"
serde_json = "1.0.85"
axum-macros = "0.2.3"
base64 = "0.13.0"
derive_more = "0.99.5"
futures = "0.3"
byte-slice-cast = "1"
once_cell = "1.0"
gst = {package = "gstreamer", version = "0.18.8", features = ["v1_20"] }
gst-app = { package = "gstreamer-app", version = "0.18.7", features = ["v1_20"] }
gst-audio = { package = "gstreamer-audio", version = "0.18.7", features = ["v1_20"] }
gst-base = { package = "gstreamer-base", version = "0.18.0", features = ["v1_20"] }
gst-video = { package = "gstreamer-video", version = "0.18.7", features = ["v1_20"] }
gst-pbutils = { package = "gstreamer-pbutils", version = "0.18.7", features = ["v1_20"] }
glib = "0.15.12"
